--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
 bin/
 dist/
 
@@ -15,7 +10,7 @@ dist/
 coverage.html
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
@@ -61,3 +56,6 @@ coverage/
 # Local development files
 tmp/
 temp/
+
+# Local build artifact
+pubsub-shovel
